Android: Fix debugger startup by trying harder to find the pid.

Task-number: QTBUG-36201

Change-Id: I8b4e1bd7615e4fda1184b0d3d443afcdc5e0e898
Reviewed-by: jian liang <jianliang79@gmail.com>
Reviewed-by: hjk <hjk121@nokiamail.com>